--- a/Uncas.Katas.MachineLearning/packages.config
+++ b/Uncas.Katas.MachineLearning/packages.config
@@ -6,5 +6,6 @@
   <package id="Accord.Statistics" version="2.12.0.0" targetFramework="net45" />
   <package id="AForge" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
+  <package id="numl" version="0.7.5" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
 </packages>
