--- a/Uncas.Katas.MachineLearning/packages.config
+++ b/Uncas.Katas.MachineLearning/packages.config
@@ -6,6 +6,8 @@
   <package id="Accord.Statistics" version="2.12.0.0" targetFramework="net45" />
   <package id="AForge" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
+  <package id="MathNet.Numerics" version="2.6.2" targetFramework="net45" />
   <package id="numl" version="0.7.5" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
+  <package id="Sharpkit.Learn" version="0.2.0" targetFramework="net45" />
 </packages>
